--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
      <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
-  <body>
+  <body style="background-color:black">
     <div class="main-block">
       <h1><strong><u>DSC-RIT Recruitment Test 2020 Question Paper</u></strong></h1><br>
       <h3>Topic: Mobile Development</h3>
@@ -14,164 +14,164 @@
         <div class="info">
           <input class="fname" type="text" name="usn" id="usn" placeholder="Enter your USN: ">
         </div>
-        <h2>Q1: There is a div A. Inside that there is a child B. I put a style of background color green on A, and red on B. What will be the color of A and B?</h2>
+        <h2>Q1: What is an adapter in Android?</h2>
         <div class="metod">
           <div> 
             <input type="radio" id="radio1" name="metod1" value="A"/>
-            <label for="radio1" class="radio">A: Green B: Red</label><br><br>
+            <label for="radio1" class="radio">Create a generic class abstraction over the main class</label><br><br>
          
             <input type="radio" id="radio2" name="metod1" value="B"/>
-            <label for="radio2" class="radio">A: Red B: Green</label><br><br>
+            <label for="radio2" class="radio">Create child views to represent the parent view items </label><br><br>
         
             <input type="radio" id="radio3" name="metod1" value="C"/>
-            <label for="radio3" class="radio">A: Green B: Green</label><br><br>
+            <label for="radio3" class="radio">Create separate activity which adapts to the child activity</label><br><br>
         
             <input type="radio" id="radio4" name="metod1" value="D"/>
-            <label for="radio4" class="radio">A: Red B: Red</label><br><br>
+            <label for="radio4" class="radio">Provides a plug-in feature to mitigate need for creating additional libraries</label><br><br>
           </div><!--A-->
         </div><br><br>
-         <h2>Q2: Which option will you prefer for faster loading?</h2>
+         <h2>Q2: What is not true about a web view used in Android?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio5" name="metod2"/>
-            <label for="radio5" class="radio">Inline styling</label><br><br>
+            <label for="radio5" class="radio">WebView is a UI component</label><br><br>
          
             <input type="radio" value="B" id="radio6" name="metod2" />
-            <label for="radio6" class="radio">Making a separate css file and linking it</label><br><br>
+            <label for="radio6" class="radio">WebView can render static HTML</label><br><br>
         
             <input type="radio" value="C" id="radio7" name="metod2"/>
-            <label for="radio7" class="radio">Using a style tag in header</label><br><br>
+            <label for="radio7" class="radio">WebView can also render dynamic web pages</label><br><br>
         
             <input type="radio" value="D" id="radio8" name="metod2" />
-            <label for="radio8" class="radio">Separate SCSS/SASS file</label><br><br>
+            <label for="radio8" class="radio">None of the above</label><br><br>
           </div><!--B-->
         </div><br><br>
-         <h2>Q3: How do you override a predefined bootstrap component using css?</h2>
+         <h2>Q3: Which compiler compiles android code?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio9" name="metod3"/>
-            <label for="radio9" class="radio">Changing the inline styling in the specific tag</label><br><br>
+            <label for="radio9" class="radio">JVM</label><br><br>
          
             <input type="radio" value="B" id="radio10" name="metod3" />
-            <label for="radio10" class="radio">By making a class in the stylesheet</label><br><br>
+            <label for="radio10" class="radio">DVM</label><br><br>
         
             <input type="radio" value="C" id="radio11" name="metod3"/>
-            <label for="radio11" class="radio">Styling in the style tag</label><br><br>
+            <label for="radio11" class="radio">Blue-J</label><br><br>
         
             <input type="radio" value="D" id="radio12" name="metod3" />
             <label for="radio12" class="radio">None of the above</label><br><br>
           </div>
         </div><br><br>
-         <h2>Q4: How will you reuse this snippet in different pages?</h2>
+         <h2>Q4: Which kernel is used in Android?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio13" name="metod4"/>
-            <label for="radio13" class="radio">Option 1</label><!--<% include header>--><br><br>
+            <label for="radio13" class="radio">Customized Linux 3.6</label><!--<% include header>--><br><br>
          
             <input type="radio" value="B" id="radio14" name="metod4" />
-            <label for="radio14" class="radio">For delivery</label><br><br>
+            <label for="radio14" class="radio">Unix 1.0</label><br><br>
         
             <input type="radio" value="C" id="radio15" name="metod4"/>
-            <label for="radio15" class="radio">For pick up</label><br><br>
+            <label for="radio15" class="radio">Symantec 1.2</label><br><br>
         
             <input type="radio" value="D" id="radio16" name="metod4" />
-            <label for="radio16" class="radio">For delivery</label><br><br>
+            <label for="radio16" class="radio">Huawei 3.0</label><br><br>
           </div>
         </div>
-         <h2>Q5: How is this?</h2>
+         <h2>Q5: Is it possible to have an activity without UI to perform actions?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio17" name="metod5"/>
-            <label for="radio17" class="radio">For pick up</label><br><br>
+            <label for="radio17" class="radio">No</label><br><br>
          
             <input type="radio" value="B" id="radio18" name="metod5" />
-            <label for="radio18" class="radio">For delivery</label><br><br>
+            <label for="radio18" class="radio">Yes</label><br><br>
         
             <input type="radio" value="C" id="radio19" name="metod5"/>
-            <label for="radio19" class="radio">For pick up</label><br><br>
+            <label for="radio19" class="radio">Maybe</label><br><br>
         
             <input type="radio" value="D" id="radio20" name="metod5" />
-            <label for="radio20" class="radio">For delivery</label><br><br>
+            <label for="radio20" class="radio">Wrong question</label><br><br>
           </div>
         </div>
-         <h2>Q6: How is this?</h2>
+         <h2>Q6: Which of the following is correct?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio21" name="metod6"/>
-            <label for="radio21" class="radio">For pick up</label><br><br>
+            <label for="radio21" class="radio">Margin is specifying the extra space left on all four sides in layout</label><br><br>
          
             <input type="radio" value="B" id="radio22" name="metod6" />
-            <label for="radio22" class="radio">For delivery</label><br><br>
+            <label for="radio22" class="radio">Padding is used to offset the content of a view by specific px or dp</label><br><br>
         
             <input type="radio" value="C" id="radio23" name="metod6"/>
-            <label for="radio23" class="radio">For pick up</label><br><br>
+            <label for="radio23" class="radio">Both A & B</label><br><br>
         
             <input type="radio" value="D" id="radio24" name="metod6" />
-            <label for="radio24" class="radio">For delivery</label><br><br>
+            <label for="radio24" class="radio">None of the above</label><br><br>
           </div>
         </div>
-         <h2>Q7: How is this?</h2>
+         <h2>Q7: What is Manifest.xml in Android?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio25" name="metod7"/>
-            <label for="radio25" class="radio">For pick up</label><br><br>
+            <label for="radio25" class="radio">It has information about layout in an application</label><br><br>
          
             <input type="radio" value="B" id="radio26" name="metod7" />
-            <label for="radio26" class="radio">For delivery</label><br><br>
+            <label for="radio26" class="radio">It has information about activities in an application</label><br><br>
         
             <input type="radio" value="C" id="radio27" name="metod7"/>
-            <label for="radio27" class="radio">For pick up</label><br><br>
+            <label for="radio27" class="radio">It has all the information about the application </label><br><br>
         
             <input type="radio" value="D" id="radio28" name="metod7" />
-            <label for="radio28" class="radio">For delivery</label><br><br>
+            <label for="radio28" class="radio">None of the above</label><br><br>
           </div>
         </div>
-        <h2>Q8: How is this?</h2>
+        <h2>Q8: Which media file format is not supported in Android?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio29" name="metod8"/>
-            <label for="radio29" class="radio">For pick up</label><br><br>
+            <label for="radio29" class="radio">MP4</label><br><br>
          
             <input type="radio" value="B" id="radio30" name="metod8" />
-            <label for="radio30" class="radio">For delivery</label><br><br>
+            <label for="radio30" class="radio">AVI</label><br><br>
         
             <input type="radio" value="C" id="radio31" name="metod8"/>
-            <label for="radio31" class="radio">For pick up</label><br><br>
+            <label for="radio31" class="radio">MIDI</label><br><br>
         
             <input type="radio" value="D" id="radio32" name="metod8" />
-            <label for="radio32" class="radio">For delivery</label><br><br>
+            <label for="radio32" class="radio">MPEG</label><br><br>
           </div>
         </div>
-        <h2>Q9: How is this?</h2>
+        <h2>Q9: What are the functionalities in AsyncTask in Android?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio33" name="metod9"/>
-            <label for="radio33" class="radio">For pick up</label><br><br>
+            <label for="radio33" class="radio">OnPreExecution()</label><br><br>
          
             <input type="radio" value="B" id="radio34" name="metod9" />
-            <label for="radio34" class="radio">For delivery</label><br><br>
+            <label for="radio34" class="radio">OnPostExecution()</label><br><br>
         
             <input type="radio" value="C" id="radio35" name="metod9"/>
-            <label for="radio35" class="radio">For pick up</label><br><br>
+            <label for="radio35" class="radio">DoInBackground()</label><br><br>
         
             <input type="radio" value="D" id="radio36" name="metod9" />
-            <label for="radio36" class="radio">For delivery</label><br><br>
+            <label for="radio36" class="radio">OnProgressUpdate()</label><br><br>
           </div>
         </div>
-        <h2>Q10: How is this?</h2>
+        <h2>Q10: What is the latest release of Android Studio?</h2>
         <div class="metod">
           <div> 
             <input type="radio" value="A" id="radio37" name="metod10"/>
-            <label for="radio37" class="radio">For pick up</label><br><br>
+            <label for="radio37" class="radio"> 3.6</label><br><br>
          
             <input type="radio" value="B" id="radio38" name="metod10" /> 
-            <label for="radio38" class="radio">For delivery</label><br><br>
+            <label for="radio38" class="radio">3.5</label><br><br>
         
             <input type="radio" value="C" id="radio39" name="metod10"/>
-            <label for="radio39" class="radio">For pick up</label><br><br>
+            <label for="radio39" class="radio">3.4</label><br><br>
         
             <input type="radio" value="D" id="radio40" name="metod10" />
-            <label for="radio40" class="radio">For delivery</label><br><br>
+            <label for="radio40" class="radio">3.3</label><br><br>
           </div>
         </div>
         <button href="/" class="button">Submit</button>
